# components/usermgmt/gen/openapi/proto/rpc/v3/user.swagger.json
@@ -24,15 +24,19 @@
     "application/yaml"
   ],
   "paths": {
-    "/auth/v3/user/{metadata.id}": {
-      "get": {
-        "operationId": "User_GetUser2",
+    "/auth/partner/{metadata.partner}/organization/{metadata.organization}/v3/user/{metadata.id}": {
+      "delete": {
+        "operationId": "User_DeleteUser2",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v3User"
+              "$ref": "#/definitions/v3DeleteUserResponse"
             }
+          },
+          "204": {
+            "description": "Returned when user is deleted successfully.",
+            "schema": {}
           },
           "403": {
             "description": "Returned when the user does not have permission to access the resource.",
@@ -53,6 +57,20 @@
           }
         },
         "parameters": [
+          {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "metadata.id",
             "in": "path",
@@ -91,13 +109,6 @@
           },
           {
             "name": "metadata.project",
-            "description": "Project. Project of the resource",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "metadata.partner",
             "description": "Project. Project of the resource",
             "in": "query",
             "required": false,
@@ -217,19 +228,17 @@
         "tags": [
           "User"
         ]
-      },
-      "delete": {
-        "operationId": "User_DeleteUser2",
+      }
+    },
+    "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/user/{metadata.id}": {
+      "get": {
+        "operationId": "User_GetUser2",
         "responses": {
           "200": {
             "description": "A successful response.",
             "schema": {
-              "$ref": "#/definitions/v3DeleteUserResponse"
+              "$ref": "#/definitions/v3User"
             }
-          },
-          "204": {
-            "description": "Returned when user is deleted successfully.",
-            "schema": {}
           },
           "403": {
             "description": "Returned when the user does not have permission to access the resource.",
@@ -250,6 +259,20 @@
           }
         },
         "parameters": [
+          {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "metadata.id",
             "in": "path",
@@ -288,13 +311,6 @@
           },
           {
             "name": "metadata.project",
-            "description": "Project. Project of the resource",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "metadata.partner",
             "description": "Project. Project of the resource",
             "in": "query",
             "required": false,
@@ -444,6 +460,20 @@
         },
         "parameters": [
           {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "metadata.id",
             "in": "path",
             "required": true,
@@ -463,7 +493,7 @@
         ]
       }
     },
-    "/auth/v3/user/{metadata.name}": {
+    "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/user/{metadata.name}": {
       "get": {
         "operationId": "User_GetUser",
         "responses": {
@@ -492,6 +522,20 @@
           }
         },
         "parameters": [
+          {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "metadata.name",
             "description": "name of the resource",
@@ -524,13 +568,6 @@
           },
           {
             "name": "metadata.project",
-            "description": "Project. Project of the resource",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "metadata.partner",
             "description": "Project. Project of the resource",
             "in": "query",
             "required": false,
@@ -690,6 +727,20 @@
         },
         "parameters": [
           {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "metadata.name",
             "description": "name of the resource",
             "in": "path",
@@ -721,13 +772,6 @@
           },
           {
             "name": "metadata.project",
-            "description": "Project. Project of the resource",
-            "in": "query",
-            "required": false,
-            "type": "string"
-          },
-          {
-            "name": "metadata.partner",
             "description": "Project. Project of the resource",
             "in": "query",
             "required": false,
@@ -883,6 +927,20 @@
         },
         "parameters": [
           {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
             "name": "metadata.name",
             "description": "name of the resource",
             "in": "path",
@@ -903,7 +961,7 @@
         ]
       }
     },
-    "/auth/v3/users": {
+    "/auth/v3/partner/{metadata.partner}/organization/{metadata.organization}/users": {
       "get": {
         "operationId": "User_GetUsers",
         "responses": {
@@ -931,6 +989,175 @@
             }
           }
         },
+        "parameters": [
+          {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "apiVersion",
+            "description": "API Version. API Version of the user resource",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "default": "usermgmt.k8smgmt.io/v3"
+          },
+          {
+            "name": "kind",
+            "description": "Kind. Kind of the user resource",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "default": "User"
+          },
+          {
+            "name": "metadata.name",
+            "description": "Name. name of the resource",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "metadata.description",
+            "description": "Description. description of the resource",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "metadata.project",
+            "description": "Project. Project of the resource",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "metadata.id",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "metadata.modifiedAt",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "spec.firstName",
+            "description": "FirstName. First name of the user",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "spec.lastName",
+            "description": "LastName. Last name of the user",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "spec.username",
+            "description": "Username. Username of the user",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "spec.phone",
+            "description": "Phone. Phone number of the user",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "spec.password",
+            "description": "Password. Password of the user",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "spec.groups",
+            "description": "Group. Groups the user belongs to",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
+          },
+          {
+            "name": "spec.emailVerified",
+            "description": "EmailVerified. Flag to show if the email of the user was verified",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "spec.phoneVerified",
+            "description": "PhoneVerified. Flag to show if phone number of the user was verified",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "spec.totpVerified",
+            "description": "TotpVerified. Flag to show if the TOTP of the user was verified",
+            "in": "query",
+            "required": false,
+            "type": "boolean"
+          },
+          {
+            "name": "status.conditionType",
+            "description": "Condition Type. type of the status condition",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "status.conditionStatus",
+            "description": "Condition Status. status of the condition",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "StatusNotSet",
+              "StatusSubmitted",
+              "StatusOK",
+              "StatusFailed"
+            ],
+            "default": "StatusNotSet"
+          },
+          {
+            "name": "status.lastUpdated",
+            "description": "Last Updated. when the condition status is last updated",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "date-time"
+          },
+          {
+            "name": "status.reason",
+            "description": "Reason. reason of the last condition status",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
         "tags": [
           "User"
         ]
@@ -967,6 +1194,20 @@
           }
         },
         "parameters": [
+          {
+            "name": "metadata.partner",
+            "description": "Partner to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "metadata.organization",
+            "description": "Organization to which the resource belongs",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
           {
             "name": "body",
             "in": "body",
@@ -1119,10 +1360,15 @@
           "description": "Project of the resource",
           "title": "Project"
         },
+        "organization": {
+          "type": "string",
+          "description": "Organization to which the resource belongs",
+          "title": "Organization"
+        },
         "partner": {
           "type": "string",
-          "description": "Project of the resource",
-          "title": "Project"
+          "description": "Partner to which the resource belongs",
+          "title": "Partner"
         },
         "id": {
           "type": "string",
